Introducing a better DB as explained in #1
The new DB format is more compact and less redundant.

The latest i18n-yummy function has been made fault tolerant.

The default lang uses the template right away,
only translations use different array.

This is a breaking change.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "bin": "bin.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf i18n.db.json && node bin.js -l en -t it -o i18n.db.json test.js",
+    "test": "if [ \"$(node test.js)\" != \"Ciao i18n!\" ]; then exit 1; fi"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
     "commander": "^2.11.0",
     "esprima": "^4.0.0",
     "html-escaper": "^1.0.1",
-    "i18n-yummy": "^0.1.0",
+    "i18n-yummy": "^0.2.0",
     "inquirer": "^3.3.0",
     "opn": "^5.1.0"
   }
